[package]
name = "hors"
version = "0.6.8"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
description = "instant coding answers via the command line(just like howdoi)"
repository = "https://github.com/WindSoilder/hors"
documentation = "https://github.com/WindSoilder/hors/blob/master/README.md"
readme = "./README.md"
keywords = ["http", "client", "cli-tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.1"
syntect = "4.3.0"
base64 = "0.12.3"
reqwest = { version="0.10.7", features=["json", "socks", "cookies", "rustls-tls"], default-features=false }
tokio = { version = "0.2", features = ["full"] }
select = "0.5.0"
rand = "0.7.3"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"
directories = "3.0.1"
url = "2.1.1"
ansi_term = "0.12"
ansi_colours = "^1.0"

[dev-dependencies]
env_logger = "0.7"
