[package]
name = "hors"
version = "0.7.1"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
description = "instant coding answers via the command line(just like howdoi)"
repository = "https://github.com/WindSoilder/hors"
documentation = "https://github.com/WindSoilder/hors/blob/master/README.md"
readme = "./README.md"
keywords = ["http", "client", "cli-tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.2"
syntect = "4.4.0"
base64 = "0.12.3"
reqwest = { version="0.10.8", features=["json", "socks", "cookies", "rustls-tls", "gzip"], default-features=false }
tokio = { version = "0.2", features = ["macros", "sync", "rt-core"] }
select = "0.5.0"
rand = "0.7.3"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0.57"
directories = "3.0.1"
url = "2.1.1"
ansi_term = "0.12"
ansi_colours = "^1.0"
lazy_static = "1.4.0"
toml = "0.5.6"

[dev-dependencies]
env_logger = "0.7"
