[package]
name = "hors"
version = "0.8.2"
authors = ["WindSoilder <WindSoilder@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
description = "instant coding answers via the command line(just like howdoi)"
repository = "https://github.com/WindSoilder/hors"
documentation = "https://github.com/WindSoilder/hors/blob/master/README.md"
readme = "./README.md"
keywords = ["http", "client", "cli-tools"]
categories = ["command-line-utilities"]
exclude = [
    "screenshots/*",
    "tests/*"
]

[dependencies]
clap = { version="4.1.0", features=["derive", "env"] }
syntect = "4.5.0"
base64 = "0.12.3"
reqwest = { version="0.11.2", features=["json", "socks", "cookies", "rustls-tls", "gzip"], default-features=false }
tokio = { version = "1.24.2", features = ["macros", "sync", "rt-multi-thread"] }
select = "0.5.0"
rand = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
bincode = "1.3.2"
serde_json = "1.0.64"
directories = "3.0.1"
url = "2.1.1"
ansi_term = "0.12"
ansi_colours = "^1.0"
lazy_static = "1.4.0"
toml = "0.5.8"
regex = "1"
env_logger = "0.8.3"
